--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "tailwind": "npx tailwindcss -i ./app/input.css -o ./app/main.css --watch"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.57.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
