--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tailwind": "npx tailwindcss -i ./app/input.css -o ./app/main.css --watch"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
