--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@supabase/supabase-js": "^2.57.2",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "^5.90.2",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.543.0",
